RESOLVED FIXED228013
[iOS] WKMouseGestureRecognizer should not have failure requirements on WKDeferringGestureRecognizer
https://bugs.webkit.org/show_bug.cgi?id=228013
Summary [iOS] WKMouseGestureRecognizer should not have failure requirements on WKDefe...
Wenson Hsieh
Reported 2021-07-15 18:16:55 PDT
...the mouse event gesture recognizer does not need to be deferred by active touch events.
Attachments
Patch (2.74 KB, patch)
2021-07-15 18:29 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-07-15 18:17:39 PDT
Wenson Hsieh
Comment 2 2021-07-15 18:29:51 PDT
EWS
Comment 3 2021-07-15 21:01:47 PDT
Committed r279975 (239718@main): <https://commits.webkit.org/239718@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433645 [details].
Note You need to log in before you can comment on or make changes to this bug.