Cherry-pick r279975. rdar://problem/80788597

[iOS] WKMouseGestureRecognizer should not have failure requirements on WKDeferringGestureRecognizer
    https://bugs.webkit.org/show_bug.cgi?id=228013
    rdar://80342462

    Reviewed by Tim Horton.

    Avoid adding a gesture failure requirement between any WKDeferringGestureRecognizers and
    WKMouseGestureRecognizer; It doesn't make sense to claim that WKMouseGestureRecognizer should only recognize
    once active touch events have been handled by the web page. Under normal circumstances, this gesture failure
    requirement is actually completely benign, since touch events should never be received by
    WKMouseGestureRecognizer in the first place, and when using a trackpad, deferring gesture recognizers are not
    triggered.

    However, if an app were to (hypothetically) swizzle out `-gestureRecognizer:shouldReceiveTouch:` to force
    WKMouseGestureRecognizer to receive normal (non-trackpad) touch events, this could cause nearly all gesture
    recognizers in the window to become unresponsive, since WKMouseGestureRecognizer would be stuck in Changed state
    long after other gestures in the same subgraph have transitioned to Ended or Failed state, thereby preventing
    all of these gestures from being reset to Possible state.

    * UIProcess/ios/WKContentViewInteraction.mm:
    (-[WKContentView deferringGestureRecognizer:shouldDeferOtherGestureRecognizer:]):

    Canonical link: https://commits.webkit.org/239718@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279975 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/239676.5@safari-612.1.24.0-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.1.24.0-branch@280070 268f45cc-cd09-0410-ab3c-d52691b4dbfc